@@ -8,14 +8,188 @@
 	<name>Kawkab Distributed Filesystem</name>
 	<url>https://github.com/smash-bi/kawkab</url>
 
+	  <properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <nodeID>0</nodeID>
+		<mainClass>kawkab.fs.cli.CLI</mainClass>
+          <Xmn>-Xmn4g</Xmn>
+          <Xmx>-Xmx4g</Xmx>
+          <MaxDirectMemorySize>-XX:MaxDirectMemorySize=2g</MaxDirectMemorySize>
+	  </properties>
+
 	<build>
+		<extensions>
+		    <extension>
+		      <!-- for gRPC -->
+		      <groupId>kr.motd.maven</groupId>
+		      <artifactId>os-maven-plugin</artifactId>
+		      <version>1.5.0.Final</version>
+		    </extension>
+		  </extensions>
+
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M2</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>3.0</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>main</id>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<minimizeJar>false</minimizeJar>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>kawkab.fs.Main</mainClass>
+								</transformer>
+							</transformers>
+							<finalName>main</finalName>
+							<shadeTestJar>true</shadeTestJar>
+						</configuration>
+					</execution>
+					<execution>
+						<id>cli</id>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<minimizeJar>false</minimizeJar>
+							<transformers>
+								<transformer
+										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>kawkab.fs.cli.CLI</mainClass>
+								</transformer>
+							</transformers>
+							<finalName>cli</finalName>
+							<shadeTestJar>true</shadeTestJar>
+						</configuration>
+					</execution>
+					<execution>
+						<id>appendTest</id>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<minimizeJar>false</minimizeJar>
+							<transformers>
+								<transformer
+										implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+									<file>kawkab.fs.tests.AppendTest</file>
+								</transformer>
+								<transformer
+										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>kawkab.fs.tests.AppendTest</mainClass>
+								</transformer>
+							</transformers>
+							<finalName>appendTest</finalName>
+							<shadeTestJar>true</shadeTestJar>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+		          <execution>
+		            <goals>
+		              <goal>exec</goal>
+		            </goals>
+		          </execution>
+		        </executions>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<executable>java</executable>
+					<arguments>
+						<argument>-ea</argument>
+						<argument>${Xmn}</argument>
+						<argument>${Xmx}</argument>
+						<argument>${MaxDirectMemorySize}</argument>
+
+<!--						<argument>-javaagent:temp/allocation-tracker/target/allocation-tracker-agent-0.0.1-SNAPSHOT.jar=kawkab.fs</argument>-->
+
+<!--						<argument>-XX:+PrintGCDetails</argument>-->
+<!--						<argument>-XX:+PrintGCTimeStamps</argument>-->
+<!--						<argument>-XX:+PrintGCDateStamps</argument>-->
+<!--						<argument>-XX:+PrintTenuringDistribution</argument>-->
+<!--						<argument>-XX:+PrintGCApplicationStoppedTime</argument>-->
+
+<!--						<argument>-XX:CMSInitiatingOccupancyFraction=92</argument>-->
+<!--						<argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>-->
+
+<!--						<argument>-XX:+UseConcMarkSweepGC</argument>-->
+<!--						<argument>-XX:+UseSerialGC</argument>-->
+<!--						<argument>-XX:+UseParallelGC</argument>-->
+<!--						<argument>-XX:ParallelCMSThreads=2</argument>-->
+<!--						<argument>-XX:ParallelCMSThreads=4</argument>-->
+<!--						<argument>-XX:+UseG1GC</argument>-->
+
+<!--						ZGC requires JDK 11-->
+						<argument>-XX:+UnlockExperimentalVMOptions</argument>
+						<argument>-XX:+UseZGC</argument>
+
+<!--						EpsilonGC requires JDK11-->
+<!--						<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
+<!--						<argument>-XX:+UseEpsilonGC</argument>-->
+
+						<argument>-DnodeID=${nodeID}</argument>
+						<argument>-classpath</argument>
+						<classpath/>
+						<argument>${mainClass}</argument>
+					</arguments>
+					<addResourcesToClasspath>true</addResourcesToClasspath>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<release>11</release>
+					<excludes>
+				      <exclude>**/thrift/*.java</exclude>
+				    </excludes>
 				</configuration>
 			</plugin>
 
@@ -24,37 +198,129 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<argLine>-Xmx50g</argLine>
+					<enableAssertions>true</enableAssertions>
+					<argLine>--illegal-access=permit</argLine>
+					<argLine>${Xmx}</argLine>
+					<!--argLine>-XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4</argLine-->
+					<!--argLine>-agentpath:/home/sm3rizvi/packages/YourKit-JavaProfiler-2019.1/bin/linux-x86-64/libyjpagent.so</argLine-->
+					<!-- argLine>-Xcomp</argLine -->
+					<!--argLine>-verbose:gc</argLine -->
+<!--					<argLine>-XX:+PrintGCDetails</argLine>-->
+<!--					<argLine>-XX:+PrintGCTimeStamps</argLine>-->
+<!--					<argLine>-XX:+PrintGCDateStamps</argLine>-->
+<!--					<argLine>-XX:+PrintTenuringDistribution</argLine>-->
+<!--					<argLine>-XX:+PrintGCApplicationStoppedTime</argLine>-->
+					<systemPropertyVariables>
+						<propertyName>nodeID</propertyName>
+						<buildDirectory>${0}</buildDirectory>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 
-
+			<plugin>
+			  <!-- for gRPC -->
+		      <groupId>org.xolstice.maven.plugins</groupId>
+		      <artifactId>protobuf-maven-plugin</artifactId>
+		      <version>0.5.1</version>
+		      <configuration>
+		        <protocArtifact>com.google.protobuf:protoc:3.5.1-1:exe:${os.detected.classifier}</protocArtifact>
+		        <pluginId>grpc-java</pluginId>
+		        <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.18.0:exe:${os.detected.classifier}</pluginArtifact>
+		      </configuration>
+		      <executions>
+		        <execution>
+		          <goals>
+		            <goal>compile</goal>
+		            <goal>compile-custom</goal>
+		          </goals>
+		        </execution>
+		      </executions>
+		    </plugin>
 		</plugins>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-bom -->
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk-bom</artifactId>
+				<version>1.11.553</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
+		<dependency>
+		  <!-- Chronicle Queue for batching -->
+		  <groupId>net.openhft</groupId>
+		  <artifactId>chronicle-queue</artifactId>
+		  <version>5.17.13</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13-beta-3</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>net.openhft</groupId>
 			<artifactId>chronicle-map</artifactId>
-			<version>3.13.0</version>
+			<version>3.17.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.java</groupId>
+					<artifactId>tools</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
-	   <groupId>org.agrona</groupId>
-	   <artifactId>agrona</artifactId>
-	   <version>0.9.5</version>
+			<groupId>org.agrona</groupId>
+			<artifactId>agrona</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
-		<!--dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
-		</dependency-->
-		<!--dependency> <groupId>org.tinylog</groupId> <artifactId>tinylog</artifactId> 
-			<version>1.2</version> </dependency -->
-		<!--dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
-			<version>4.12</version> <scope>test</scope> </dependency> <dependency> <groupId>org.lmdbjava</groupId> 
-			<artifactId>lmdbjava</artifactId> <version>0.0.5</version> </dependency -->
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+		</dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+		  <groupId>io.grpc</groupId>
+			<artifactId>grpc-netty-shaded</artifactId>
+			<version>1.20.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>io.grpc</groupId>
+		  <artifactId>grpc-protobuf</artifactId>
+		  <version>1.20.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>io.grpc</groupId>
+		  <artifactId>grpc-stub</artifactId>
+		  <version>1.20.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.8.0-rc-1</version>
+		</dependency>
 	</dependencies>
 
 </project>
